--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,7 +1,13 @@
 controllers:
-    resource: ../../src/Controller
+    resource: ../../src/Controller/*
     type: annotation
     exclude: ../../src/Controller/Api
+
+api:
+    resource: ../../src/Controller/Api
+    type: annotation
+    prefix: '/api'
+    name_prefix: 'api_'
 
 kernel:
     resource: ../../src/Kernel.php
